improved the web3 skin - removed animations - fixed a small css glitch - added the needed configuration options - updated the TODO file - fixed the flickering loading process due the missing animations
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/pmkshadowbox/trunk@33587 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/resources/skinModifications/web3/resources/shadowbox.css
+++ b/resources/skinModifications/web3/resources/shadowbox.css
@@ -121,7 +121,6 @@
   float: left;
   height: 14px;
   padding-left: 2px;
-  border-left: 1px solid #ddd;
 }
 #sb-nav2 {
 	float: right;
